@@ -1,3 +1,8 @@
+2008-04-29  Michal Ludvig  <michal@logix.cz>
+
+	* S3/SortedDict.py: rewritten from scratch to preserve
+	  case of keys while still sorting in case-ignore mode.
+
 2008-04-28  Michal Ludvig  <michal@logix.cz>
 
 	* S3/S3.py: send_file() now computes MD5 sum of the file
